--- a/stats.html
+++ b/stats.html
@@ -10,8 +10,7 @@
 <body>
     <h1># project-stats</h1>
     <p>taken from github.</p>
-    <blockquote><strong>WARNING:</strong> you may encouter rate limits.</blockquote>
-    <ul>
-        <li><a href="/stats.html">project-stats</a></li>
-    </ul>
+    <blockquote><strong>WARNING:</strong> you will most likely encounter rate limits.</blockquote>
+    <div id="stats"></div>
 </body>
+<script src="/js/stats.js"></script>
